<resources>
    <string name="app_name">TradeStocksApp.com</string>
    <string name="string_Signal">Signal</string>
    <string name="string_Signals">Signals</string>
    <string name="string_Watchlist">Watchlist</string>
    <string name="string_Search">Search</string>
    <string name="string_Sectors">Sectors</string>
    <string name="string_More">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="companies_or_symbols">Companies or symbols</string>
    <string name="string_buy">BUY</string>
    <string name="string_sell">SELL</string>
    <string name="symbol_date">Symbol / Date</string>
    <string name="sell_price">Sell price</string>
    <string name="buy_price">Buy price</string>
    <string name="sell_buy_price">Sell/Buy price</string>

    <string name="string_subscription">Subscription</string>
    <string name="string_terms_amp_conditions"><![CDATA[Terms&Conditions]]></string>
    <string name="string_sectors_list">Sectors list</string>
    <string name="string_current_price">Previous close</string>
    <string name="string_communication_services">Communication Services</string>
    <string name="string_consumer_discretionary">Consumer Discretionary</string>
    <string name="string_consumer_staples">Consumer Staples</string>
    <string name="string_about">About</string>
    <string name="string_all">All</string>
    <string name="string_eu_stocks">EU Stocks</string>
    <string name="string_us_stocks">US Stocks</string>
    <string name="string_indices">Indices</string>
    <string name="string_forex">Forex</string>
    <string name="string_cryptos">Cryptos</string>
    <string name="string_etf_s">ETF\'s</string>
    <string name="string_financial_services">Financial Services</string>
    <string name="string_energy">Energy</string>
    <string name="string_general">General</string>
    <string name="string_healthcare">Healthcare</string>
    <string name="string_industrial">Industrial</string>
    <string name="string_materials">Materials</string>
    <string name="string_real_estate">Real Estate</string>
    <string name="string_technology">Technology</string>
    <string name="string_utilities">Utilities</string>
    <string name="string_tradestockapp_com">TradeStocksApp.com</string>
    <string name="string_1st_part_terms_conditions">Thanks for choosing Spotifi (“Spotify,” “we,” “us,” “our”). Spotify provides personalized services with social and interactive features for streaming music and other content as well as other products and services that may be developed from time to time.</string>
    <string name="string_spotifi">Spotifi</string>
    <string name="string_2_part_terms_conditions_">By signing up or otherwise using any of these Spotify services, including all associated features and functionalities, websites and user interfaces, as well as all content and software applications associated with our services (collectively, the “Spotify Service” or “Service”), or accessing any music, videos or other content or material that is made available through the Service (the “Content”) you are entering into a binding contract with Spotify USA Inc. Thanks for choosing Spotify (“Spotify,” “we,” “us,” “our”). Spotify provides personalized services with social and interactive features for streaming music and other content as well as other products and services that may be developed from time to time. By signing up or otherwise using any of these Spotify services, including all associated features and functionalities, websites and user interfaces, as well as all content and software applications associated with our services (collectively, the “Spotify Service” or “Service”), or accessing any music, videos or other content or material that is made available through the Service (the “Content”) you are entering into a binding contract with Spotify USA Inc.</string>
    <string name="string_i_agree"><![CDATA[I agree with terms&Conditions]]></string>
    <string name="string_i_dont_agree">I don\'t agree</string>
    <string name="string_live_trading_results">Live trading results</string>
    <string name="string_total_buy_signals">Total Buy signals</string>
    <string name="string_profit">Profit</string>
    <string name="string_loss">Loss</string>
    <string name="string_total_sell_signals">Total Sell signals</string>
    <string name="string_version">Version 0.1</string>
    <string name="string_contact">Contact</string>
    <string name="string_cell_number">+7(999)724-70-20</string>
    <string name="after_you_subscribe_you_ll_get_it">After you subscribe, you\'ll get it:</string>
    <string name="string_2_816_000_premium_icons">2,816,000+ premium icons</string>
    <string name="string_no_attribution_required_more_info">No attribution required (more info)</string>
    <string name="string_unlimited_downloads_more_info">Unlimited downloads (more info)</string>
    <string name="string_priority_support">Priority support</string>
    <string name="string_no_ads">No ads</string>
    <string name="string_7_days_free_trial_period">7 DAYS FREE TRIAL PERIOD</string>
    <string name="string_monthly_subscription">Monthly subscription</string>
    <string name="string_annual_subscription">Annual subscription</string>
    <string name="string_link_1">Link 1</string>
    <string name="string_and">and</string>
    <string name="string_link_2">Link 2</string>
    <string name="string_check_all_signals">Check all signals</string>
    <string name="string_sell_buy">Sell / Buy</string>
    <string name="string_enjoy_short_term_investing">Enjoy short-term investing</string>
    <string name="string_7_days_free">7 days free</string>
    <string name="string_sector">Sector</string>
    <string name="string_add_to_watchlist">Add to watchlist</string>
    <string name="string_remove_from_watchlist">Remove from watchlist</string>

    <string name="string_detailed_information">Detailed information</string>
    <string name="string_stop_loss">STOP LOSS</string>
    <string name="string_take_profit">TAKE PROFIT</string>
    <string name="string_filter">Filter</string>
    <string name="string_apply">Apply</string>
    <string name="filters_all">All</string>
    <string name="apply">Apply</string>
    <string name="short_term_sell_amp_buy_trading_signals_for_your_investment_plan"><![CDATA[short-term Sell&Buy trading signals for your investment plan.]]></string>
    <string name="find">Find     </string>


</resources>
