<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner_bottom_sheet_white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        android:textColor="@color/colorBlack"
        android:text="@string/string_terms_amp_conditions"
        android:layout_gravity="center"/>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4sp"
                android:text="@string/string_1st_part_terms_conditions"
                android:textColor="@color/colorBlack"
                android:id="@+id/tv_full_terms"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/string_spotifi"
                android:visibility="gone"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="4sp"
                android:visibility="gone"
                android:text="@string/string_2_part_terms_conditions_"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp">
        <Button
            android:id="@+id/button_i_agree_bottom_sheet"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorWhite"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/string_i_agree"
            android:background="@drawable/outline_background_selected_search_fragment"/>

        <TextView
            android:id="@+id/texView_i_dont_agree_bottom_sheet"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:text="@string/string_i_dont_agree"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button_i_agree_bottom_sheet"
            android:focusable="true" />
    </RelativeLayout>
</LinearLayout>