<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsAndConditionsFragment"
    android:background="@color/colorWhite">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView_termsCond_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/string_terms_amp_conditions"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/image_button_back_to_more_frag_from_termsCond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:layout_marginTop="26dp"
        android:layout_marginStart="20dp"
        android:background="@color/colorWhite"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView_termsCond_title"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4sp"
                android:text="@string/string_1st_part_terms_conditions"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/string_spotifi"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/string_2_part_terms_conditions_"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>