<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".AboutFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView_about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_about"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <ImageButton
        android:id="@+id/image_button_back_to_more_frag_from_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:layout_marginTop="26dp"
        android:layout_marginStart="20dp"
        android:background="@color/colorWhite"/>


    <ImageView
        android:id="@+id/image_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_about_title"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"/>
    <TextView
        android:id="@+id/textView_about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_version"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/image_about"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="55dp"/>

    <TextView
        android:id="@+id/textView_about_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_contact"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:layout_below="@+id/textView_about_version"
        android:gravity="center_horizontal"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/textView_about_cell_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_cell_number"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:layout_below="@+id/textView_about_contact"
        android:gravity="center_horizontal"
        android:layout_marginTop="35dp" />

    <TextView
        android:id="@+id/textView_about_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=" for example: www.google.com"
        android:autoLink="web"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:linksClickable="true"
        android:layout_below="@+id/textView_about_cell_number"
        android:gravity="center_horizontal"
        android:layout_marginTop="12dp" />


</RelativeLayout>