<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SubscriptionFragment"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/textView_subscription_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/string_subscription"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:layout_marginTop="10dp"
        android:layout_marginStart="6dp"
        android:padding="16dp"
        android:background="@color/colorWhite"/>

    <TextView
        android:id="@+id/textView_youll_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/iv_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/colorBlack"
        android:gravity="center"
        android:textSize="16sp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_list_of_available_subscriptions"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@+id/textView_youll_get"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recyclerview_list_of_available_subscriptions"
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="46dp"
        android:layout_toStartOf="@+id/textView_and"
        android:textSize="16sp"
        android:text="@string/string_link_1"/>

    <TextView
        android:id="@+id/textView_and"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/recyclerview_list_of_available_subscriptions"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="46dp"
        android:textSize="16sp"
        android:text="@string/string_and"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recyclerview_list_of_available_subscriptions"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="7dp"
        android:layout_toEndOf="@+id/textView_and"
        android:layout_marginBottom="46dp"
        android:textSize="16sp"
        android:text="@string/string_link_2"/>


</RelativeLayout>