<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:text="@string/string_filter"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bottom_gray_border">

                <ImageView
                    android:id="@+id/image_filters_0"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_filter_checked"/>

                <TextView
                    android:id="@+id/textView_filters_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:text="@string/string_all"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bottom_gray_border">

                <ImageView
                    android:id="@+id/image_filters_1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_filter_not_checked"/>

                <TextView
                    android:id="@+id/textView_filters_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:text="@string/string_eu_stocks"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bottom_gray_border">

                <ImageView
                    android:id="@+id/image_filters_2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_filter_not_checked"/>

                <TextView
                    android:id="@+id/textView_filters_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:text="@string/string_us_stocks"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bottom_gray_border">

                <ImageView
                    android:id="@+id/image_filters_3"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_filter_not_checked"/>

                <TextView
                    android:id="@+id/textView_filters_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:text="@string/string_indices"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bottom_gray_border">

                <ImageView
                    android:id="@+id/image_filters_4"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_filter_not_checked"/>

                <TextView
                    android:id="@+id/textView_filters_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:text="@string/string_forex"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bottom_gray_border">

                <ImageView
                    android:id="@+id/image_filters_5"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_filter_not_checked"/>

                <TextView
                    android:id="@+id/textView_filters_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:text="@string/string_cryptos"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bottom_gray_border">

                <ImageView
                    android:id="@+id/image_filters_6"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_filter_not_checked"/>

                <TextView
                    android:id="@+id/textView_filters_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:text="@string/string_etf_s"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button_set_filters_to_signals_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:paddingStart="100dp"
        android:paddingEnd="100dp"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/string_apply"
        android:background="@drawable/outline_background_selected_search_fragment"
        android:layout_gravity="center"/>




</LinearLayout>

